Add JVM arguments for test task to open Java modules