@@ -91,3 +91,11 @@ flyway {
 	user = 'tom'
 	password = 'tom'
 }
+
+test {
+    jvmArgs += [
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED"
+    ]
+}
